Add color picker, style background
Good bit of work - added the iro color picker and
got it working to automatically set the pen color.

Set up the background styling and some simple page layout
stuff to get everything near where I want it.

--- a/styles/etchasketch.css
+++ b/styles/etchasketch.css
@@ -1,4 +1,23 @@
+body {
+  display: flex;
+  background-color: #eb0f0e;
+  justify-content: space-between;
+  padding-left: 30rem;
+  padding-right: 30rem;
+  padding-bottom: 30rem;
+  padding-top: 10rem;
+}
+
 #container {
+  /* padding-top: 5em; */
+  /* flex: none; */
+}
+
+#tools {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .row {
